--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 </div>
 
     <div class="grupo">
-    <label for="phone" id="number-label">Número de teléfono (opcional):</label>
-    <input type="number" id="number" name="phone" min="10" max="20" placeholder="Ingrese su número de Teléfono">
+    <label for="phone" id="number-label">Edad: </label>
+    <input type="number" id="number" name="phone" min="10" max="20" placeholder="edad" required>
 </div>
 
 <div class="grupo">
